# llm-service-lab

./: .gitignore  pyproject.toml
docs/: uv_guide.md
scripts/: run_nb.sh
study/week01/: 01_openai_api.ipynb
study/week05/: 05.ipynb  20260408.ipynb
study/week06/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
